config: add swagger open api documentation
