# storage/api-docs/api-docs.json
@@ -9,14 +9,14 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/api/user/register": {
+        "/api/auth/register": {
             "post": {
                 "tags": [
-                    "Users"
+                    "Auth"
                 ],
                 "summary": "Register user",
                 "description": "Register a new user",
-                "operationId": "c5d4be2455cfdca65ec102b1804ada91",
+                "operationId": "d764dd091cc4494ae0baf360b03319f3",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -69,14 +69,14 @@
                 }
             }
         },
-        "/api/user/login": {
+        "/api/auth/login": {
             "post": {
                 "tags": [
-                    "Users"
+                    "Auth"
                 ],
                 "summary": "Login user",
                 "description": "Login user",
-                "operationId": "fa481c4ebcab70051c9df8d0624a47e8",
+                "operationId": "8dcb70df1020986038d098cc08d05dae",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -107,12 +107,44 @@
                     }
                 }
             }
+        },
+        "/api/auth/logout": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Logout user",
+                "description": "Logout user",
+                "operationId": "69281b12abb272c76871f19cb17ca563",
+                "responses": {
+                    "200": {
+                        "description": "User logout successfully"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        }
+    },
+    "components": {
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "bearerFormat": "JWT",
+                "scheme": "bearer"
+            }
         }
     },
     "tags": [
         {
-            "name": "Users",
-            "description": "Users"
+            "name": "Auth",
+            "description": "Auth"
         }
     ]
 }
